litmask/tests/compile/mask_format_too_few_args.rs
//! `mask_format!` rejects placeholders that reference an argument
//! index beyond the supplied positional list.

use litmask::mask_format;

fn main() {
    let _ = mask_format!("{} {} {}", "only-one");
}
